# personal-api

./: .gitignore  Cargo.toml  Procfile  README.md
migrations/2023-03-07-225805_create_page_contents/: down.sql  up.sql
src/: handler.rs  lib.rs  main.rs  schema.rs
src/models/: models.rs
src/routes/: index.rs  info.rs
src/services/: index.rs  info.rs
